fixed field starter registration